--- a/maps.qmd
+++ b/maps.qmd
@@ -51,18 +51,21 @@ ggplot() +
   annotation_map_tile(type = "osm",  zoomin = -2, alpha = 0.5) +
   geom_sf(data = spatial_data, aes(fill = Species), shape = 21, alpha = 0.5, size = 4) +
   annotation_scale(location = "tl") +
-  annotation_north_arrow(location = "bl", which_north = "true") +
+  annotation_north_arrow(location = "bl", 
+                         which_north = "true",
+                         style = north_arrow_fancy_orienteering()) +
   fixed_plot_aspect(ratio = 1) +
   coord_sf() +
   scale_fill_manual(values = graph_bat_colours) +
   scale_size_area(max_size = 12) +
+  theme_void() +
   theme(legend.position = "right",
     axis.title.y = element_blank(),
     axis.title.x = element_blank(),
     axis.text.x = element_blank(),
     axis.text.y = element_blank(),
     axis.ticks = element_blank(),
-    title = element_text(colour = "grey80", size = 14),
+    title = element_text(colour = "black", size = 14),
     legend.text = element_text(face = "italic"))
 
 
@@ -216,6 +219,7 @@ plotmap <- ggplot() +
   scale_size_area(max_size = 12) +
   labs(size = "Bat Activity (secs)",
       fill = "Species") +
+  theme_void() +
   theme(legend.position = "right",
     axis.title.y = element_blank(),
     axis.title.x = element_blank(),
@@ -242,7 +246,7 @@ plotmap +
   scale_size_area(max_size = 8) +
   facet_wrap(~Species, ncol = 3) +
   theme(legend.position = "none",
-        strip.text.x = element_text(size=7, face="italic", colour = "white"),
+        strip.text.x = element_text(size=12, face="italic", colour = "white"),
         strip.background = element_rect(fill = "black"))
   
 
@@ -253,7 +257,7 @@ plotmap +
 
 ## Outline Maps 
 
-Outline maps are useful base maps; as they are not cluttered by distracting information.  Outline maps are available from the Office for National Statistics[^5]. Digital boundary products and reference maps are supplied under the Open Government Licence and should include copyright statements when the maps are reproduced or material is used[^6].
+Outline maps are useful base maps; as they are not cluttered by distracting information.  Outline maps are available from the Office for National Statistics[^5]. Digital boundary products and reference maps are supplied under the Open Government Licence and should include copyright statements when the maps are reproduced[^6].
 
 [^5]: <https://geoportal.statistics.gov.uk/>
 [^6]: Licence information can be found here: <https://www.ons.gov.uk/methodology/geography/licences>
