--- a/statistics.qmd
+++ b/statistics.qmd
@@ -60,8 +60,7 @@ agg_data <- statics_plus %>%
   filter(Species == "Pipistrellus pipistrellus") %>%
   #filter(Description == "Static 2" | Description == "Static 3") %>% 
   filter(Month == "Sep" | Month == "Oct") %>% 
-  mutate(DateTime15 = lubridate::round_date(DateTime, "15 minutes"),
-         DateTime30 = lubridate::round_date(DateTime, "30 minutes"))
+  mutate(DateTime30 = lubridate::round_date(DateTime, "30 minutes"))
 
 ###
 ```
@@ -89,7 +88,6 @@ flextable() %>%
   fontsize(size = 9.5, part = "all") %>% 
   width(j = 1, width = 1) %>%
   width(j = 2:9, width = 0.6) %>%
-  #italic(j = 1, italic = TRUE, part = "body") %>%
   bg(bg = "black", part = "header") %>%
   color(color = "white", part = "header") %>% 
   colformat_int(j = 9, big.mark = " ") %>% 
@@ -97,6 +95,16 @@ flextable() %>%
 
 ```
 
+Where:  
+
+* __Min__:- Minimum value.  
+* __Q1__:-  Lower quartile, or first quartile (Q1), the value under which 25% of data points are found when they are arranged in increasing order.  
+* __Mean__:- Arithmetic mean of a dataset is the sum of all values divided by the total number of values.   
+* __Median__:- The middle number; found by ordering all data points and picking out the one in the middle (or if there are two middle numbers, taking the mean of those two numbers).    
+* __Q3__:- Upper quartile, or third quartile (Q3), is the value under which 75% of data points are found when arranged in increasing order. 
+* __Max__:- Maximum value.  
+* __sd__:- Standard deviation, a summary measure of the differences of each observation from the mean.   
+* __Nr__:- Number of values.  
 
 
 ```{r}
@@ -128,7 +136,7 @@ Count30 <- bind_rows(Sep, Oct)
 ggplot(Count30, aes(Passes, fill = Month )) +
   geom_density(alpha = 0.5) +
   scale_fill_nejm() +
-  labs(x = "Passes (Number / 15 minutes)") +
+  labs(x = "Passes (Number / 30 minutes)") +
   theme_bw() +
   theme(legend.position = "bottom")
 
@@ -140,7 +148,12 @@ Using the Mann-Whitney-Wilcoxon Test, we can decide whether the population distr
 
 It is assumed The survey effort (length of time the bat detectors where deployed and the locations are the same for both months)
 
-Without assuming the data to have normal distribution, decide at .01 significance level (p < 0.01) if the observations of Common pipistrelle bats (every 15 minutes) for September and October have identical data distribution.
+Without assuming the data to have normal distribution, decide at .01 significance level (p < 0.01) if the observations of Common pipistrelle bats (every 30 minutes) for September and October have identical data distribution.
+
+* The null hypothesis H~0~: is that the common pipistrelle observation data for September and October are identical populations.   
+* The alternate hypothesis H~1~: is that the common pipistrelle observation data of September and October are not identical populations.
+
+To test the hypothesis, we apply the `wilcox.test` function to compare the independent samples.
 
 ```{r}
 #| label: tbl-mw
@@ -166,12 +179,12 @@ tidy(mw) %>%
 
 ```
 
-The null hypothesis Ho: is that the common pipstrelle observation data for September and October are identical populations. The alternate hypothesis H1: is that the common pipstrelle observation data of September and October are not identical populations.
 
 
-To test the hypothesis, we apply the wilcox.test function to compare the independent samples. As the p-value turns out to be `r wilcox.test(Passes ~ Month, data=Count30)$p.value`, and is not less than the .01 significance level, we do not reject the null hypothesis. At .01 significance level (p < 0.01), we conclude that the common pipstrelle observation data for September and October are identical populations.
 
+Results from the the `wilcox.test` are shown in @tbl-mw; as the p-value turns out to be `r wilcox.test(Passes ~ Month, data=Count30)$p.value`, and is not less than the .01 significance level[^1], we do not reject the null hypothesis. At .01 significance level (p < 0.01), we conclude that the common pipistrelle observation data for September and October are identical populations.
 
+[^1]: A p-value is a measure of the probability that the observed results of a statistical test occurred by chance, given that the null hypothesis is true. In other words, a p-value helps you determine whether the results of your experiment are statistically significant. If the p-value is low (generally less than 0.05; here 0.01 is chosen), you can reject the null hypothesis and conclude that the observed differences between the groups you are studying are statistically significant.
 
 ## Comparing More Than Two Groups
 
